--- a/www/index2.html
+++ b/www/index2.html
@@ -25,7 +25,7 @@
             </div><!--main-->
             <div data-role="collapsible-set">
                 <div data-role="collapsible" data-collapsed="false">
-                    <h3> collapsibe one </h3>
+                    <h3> collapsibe oneee </h3>
                     <p> This area is collapsibe. Put your content here"</p> 
                 </div><!--collapsible-->
                 <div data-role="collapsible">
